css: fix alignement

--- a/css/demo.css
+++ b/css/demo.css
@@ -88,6 +88,7 @@ a:hover, visited, active {
 .container > header nav {
 	float: right;
 	text-align: center;
+	padding-top: 14px;
 }
 
 .container > header nav a {
